practice/validationwebhook/demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
  labels:
    example-webhook-enabled: "true"
spec:
  containers:
  - name: nginx
    image: nginx
